minjin part fix1

--- a/dotnetgirls_site/Components/Contact.razor
+++ b/dotnetgirls_site/Components/Contact.razor
@@ -1,5 +1,20 @@
+<link href="css/Contact.css" rel="stylesheet" />
+
 <section id="contact">
-    <h1>Contact</h1>
+    <h1>Want to know more about DotNetGirls?</h1>
+    <div class="sns">
+        <div class="github-content">
+            <a href="https://github.com/dotnetgirls" target="_blank" rel="noopener noreferrer">
+                <img src="images/github-mark.png" alt="GitHub Logo" class="github-logo" />
+            </a>
+        </div>
+        <div class="x-content">
+            <a href="mailto:admin@dotnetgirls.org" target="_blank" rel="noopener noreferrer">
+                <img src="images/x-logo.png" alt="X Logo" class="x-logo" />
+            </a>
+        </div>
+    </div>
+    
 </section>
 
 @code{
