--- a/dotnetgirls_site/Layout/Footer.razor
+++ b/dotnetgirls_site/Layout/Footer.razor
@@ -1,5 +1,7 @@
+<link href="css/Footer.css" rel="stylesheet" />
+
 <section id="footer">
-    <h1>Footer</h1>
+    <p>contact e-mail : admin@dotnetgirls.org</p>
 </section>
 
 @code{
