dotnetgirls color change

--- a/dotnetgirls_site/Components/Contact.razor
+++ b/dotnetgirls_site/Components/Contact.razor
@@ -1,7 +1,7 @@
 <link href="css/Contact.css" rel="stylesheet" />
 
 <section id="contact">
-    <h1>Want to know more about DotNetGirls?</h1>
+    <h1>Want to know more about <a class="name">DotNetGirls?</a></h1>
     <div class="sns">
         <div class="github-content">
             <a href="https://github.com/dotnetgirls" target="_blank" rel="noopener noreferrer">
