--- a/dotnetgirls_site/Components/Subscribe.razor
+++ b/dotnetgirls_site/Components/Subscribe.razor
@@ -1,5 +1,88 @@
+<!-- Inline CSS for styling text -->
+<style>
+    .large-text {
+        font-size: 40pt;
+    }
+    .medium-text {
+        font-size: 20pt;
+    }
+    .small-text {
+        font-size: 10pt;
+    }
+    #subscribe {
+        text-align: center; /* Centers text inside the section */
+    }
+
+    #notice {
+        text-align: center; /* Centers text inside the section */
+    }
+</style>
+
 <section id="subscribe">
-    <h1>About</h1>
+    <h1 class="large-text">Subscribe Newsletter</h1>
+    <p class="medium-text">We send you information about</p>
+    <p class="medium-text">latest our community events and news.</p>
+</section>
+
+<div id="mc_embed_shell">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_shell {
+            text-align: center; /* 중앙 정렬 텍스트 */
+        }
+        #mc_embed_signup {
+            background: #fff;
+            clear: left;
+            font: 14px Helvetica, Arial, sans-serif;
+            width: 600px;
+            margin: 0 auto; /* 중앙 정렬 블록 요소 */
+        }
+        .optionalParent {
+            text-align: center; /* 중앙 정렬 텍스트 */
+        }
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. */
+    </style>
+    <div id="mc_embed_signup">
+        <form action="https://naver.us22.list-manage.com/subscribe/post?u=24d27715d3f7aeb389f5cf491&amp;id=0356499a46&amp;f_id=0034d2e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+            <div id="mc_embed_signup_scroll">
+                <h2>Subscribe</h2>
+                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                <div id="mce-responses" class="clear foot">
+                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                    <!-- Real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+                    <input type="text" name="b_24d27715d3f7aeb389f5cf491_0356499a46" tabindex="-1" value="">
+                </div>
+                <div class="optionalParent">
+                    <div class="clear foot">
+                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iT9LoY" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+    <script type="text/javascript">
+        (function ($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL'; ftypes[0] = 'email';
+            fnames[1] = 'FNAME'; ftypes[1] = 'text';
+            fnames[2] = 'LNAME'; ftypes[2] = 'text';
+            fnames[3] = 'ADDRESS'; ftypes[3] = 'address';
+            fnames[4] = 'PHONE'; ftypes[4] = 'phone';
+            fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
+    </script>
+</div>
+
+<section id="notice">
+    <p class="small-text">Your email address will only be used to send newsletters.</p>
 </section>
 
 @code{
