header, about, home made

--- a/dotnetgirls_site/Components/About.razor
+++ b/dotnetgirls_site/Components/About.razor
@@ -1,5 +1,15 @@
+<link href="css/About.css" rel="stylesheet" />
+
 <section id="about">
-    <h1>About</h1>
+    <div class="text-center">
+        <h1 id ="about_h1">Who is DotNetGirls?</h1>
+        <p>
+            <span class="text-purple">DotNetGirls</span> is<br/>
+            a non-profit organization and a community<br/>to empower women developers.<br/><br/>
+            We hold regular hands-on workshops and<br/> 
+            technology events to provide opportunity.
+        </p>
+    </div>
 </section>
 
 @code{
