--- a/dotnetgirls_site/Components/Home.razor
+++ b/dotnetgirls_site/Components/Home.razor
@@ -1,5 +1,12 @@
+<link href="css/Home.css" rel="stylesheet" />
 <section id="home">
-    <h1>Home</h1>
+    <div class="background">
+        <img src="images/homeimage1.png" alt="home image" class="home-image" />
+        <div class="overlay">
+            <h1>OnBoarding Others</h1>
+            <p>DotNetGirls&nbsp;rovides&nbsp;opportunities&nbsp;for&nbsp;women&nbsp;developers<br/>to&nbsp;maximize&nbsp;their&nbsp;potential&nbsp;and&nbsp;grow&nbsp;with&nbsp;.NET&nbsp;technology.</p>
+        </div>
+    </div>
 </section>
 
 @code{
