--- a/dotnetgirls_site/Layout/Header.razor
+++ b/dotnetgirls_site/Layout/Header.razor
@@ -1,5 +1,15 @@
+<link href="css/Header.css" rel="stylesheet" />
 <section id="header">
-    <h1>header</h1>
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <a href ="#home"><img src="images/main_logo.png" alt="DotNetGirls Logo"></a>
+        </div>
+        <ul class="navbar__menu">
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#subscribe">SUBSCRIBE</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
+    </nav>
 </section>
 
 @code{
