--- a/dotnetgirls_site/wwwroot/css/Footer.css
+++ b/dotnetgirls_site/wwwroot/css/Footer.css
@@ -2,5 +2,7 @@
     padding-top:15px;
     padding-bottom:15px;
     text-align: center;
-    background-color: rgb(123, 89, 135,0.7);
+    background-color: #c596ce;
+    color: white;
+    font-size: 3px;
 }
