--- a/dotnetgirls_site/wwwroot/css/Footer.css
+++ b/dotnetgirls_site/wwwroot/css/Footer.css
@@ -2,7 +2,7 @@
     padding-top:15px;
     padding-bottom:15px;
     text-align: center;
-    background-color: #c596ce;
+    background-color: #bfbfbf;
     color: white;
     font-size: 3px;
 }
