--- a/dotnetgirls_site/wwwroot/css/Home.css
+++ b/dotnetgirls_site/wwwroot/css/Home.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Cafe24Decoshadow';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-3@1.1/Cafe24Decoshadow.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cafe24Lovingu';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-3@1.1/Cafe24Lovingu.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .background {
     width: 100%;
     height: 100%;
@@ -43,13 +57,18 @@ img {
 }
 
 .overlay h1 {
-    font-size: 100px;
+    padding-top: 20vh;
+    font-family: 'Cafe24Decoshadow';
+    font-size: 7vw; /* 화면 너비의 7%로 글자 크기 설정 */
     margin-bottom: 20px;
     color: white;
 }
 
 .overlay p {
-    font-size: 30px;
-    margin: 0 auto;
+    font-family: 'Cafe24Lovingu';
+    font-size: 4vw; /* 화면 너비의 4%로 글자 크기 설정 */
+    margin-top: 20px; 
+    margin-bottom: 5px; 
+    line-height: 1; 
     color: white;
 }
