--- a/dotnetgirls_site/wwwroot/css/Subscribe.css
+++ b/dotnetgirls_site/wwwroot/css/Subscribe.css
@@ -1,11 +1,20 @@
+@font-face {
+    font-family: 'SubFont';
+    src: url('/fonts/MontserratExtrabold-qZ7Rx.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body, html {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'subFont', sans-serif;
 }
 
 /* #subscribe 내의 모든 자식 요소 스타일 수정 */
 #subscribe > * {
+    font-family: 'subFont', sans-serif;
     position: static; /* 절대 위치 제거 */
     text-align: center;
     margin: 10px 0; /* 각 요소 사이에 여백 추가 */
