About, Header font adit

--- a/dotnetgirls_site/Components/Home.razor
+++ b/dotnetgirls_site/Components/Home.razor
@@ -4,7 +4,7 @@
         <img src="images/homeimage1.png" alt="home image" class="home-image" />
         <div class="overlay">
             <h1>OnBoarding Others</h1>
-            <p>DotNetGirls&nbsp;rovides&nbsp;opportunities&nbsp;for&nbsp;women&nbsp;developers<br/>to&nbsp;maximize&nbsp;their&nbsp;potential&nbsp;and&nbsp;grow&nbsp;with&nbsp;.NET&nbsp;technology.</p>
+            <p>DotNetGirls&nbsp;provides&nbsp;opportunities&nbsp;for&nbsp;women&nbsp;developers<br/>to&nbsp;maximize&nbsp;their&nbsp;potential&nbsp;and&nbsp;grow&nbsp;with&nbsp;.NET&nbsp;technology.</p>
         </div>
     </div>
 </section>
