--- a/dotnetgirls_site/wwwroot/css/Footer.css
+++ b/dotnetgirls_site/wwwroot/css/Footer.css
@@ -3,4 +3,5 @@
     padding-bottom:15px;
     text-align: center;
     background-color: rgb(123, 89, 135,0.7);
+    font-family: 'subFont', sans-serif;
 }
