--- a/dotnetgirls_site/wwwroot/css/Subscribe.css
+++ b/dotnetgirls_site/wwwroot/css/Subscribe.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'SubFont';
-    src: url('/fonts/MontserratExtrabold-qZ7Rx.otf') format('opentype');
+    src: url('/fonts/MontserratExtrabold-qZ7Rx.otf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +9,6 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'subFont', sans-serif;
 }
 
 /* #subscribe 내의 모든 자식 요소 스타일 수정 */
