change font and margin

--- a/dotnetgirls_site/Components/Subscribe.razor
+++ b/dotnetgirls_site/Components/Subscribe.razor
@@ -4,22 +4,23 @@
 
 <section id="subscribe">
     <h1>Subscribe Newsletter</h1>
-    <p><br>We send you information about</p>
-    <p style="margin-bottom: 20px;">latest our community events and news.</p>
+    <p>We send you information about<br/>latest our community events and news.</p>
 
-    <div id="mc_embed_shell">
+        <div id="mc_embed_shell">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
     <style type="text/css">
         #mc_embed_shell {
+            font-family: 'Montserrat', sans-serif;
             text-align: center; /* 중앙 정렬 텍스트 */
-            margin-top: 60px; /* Section과 div 사이의 하단 여백 설정 */
+            @* margin-top: 30px; /* Section과 div 사이의 하단 여백 설정 */ *@
             width: 70%; /* 너비를 70%로 설정 */
             max-width: 600px; /* 최대 너비를 600px로 설정 */
             margin: 0 auto; /* 중앙 정렬 블록 요소 */
         }
         #mc_embed_signup {
+            font-family: 'Montserrat', sans-serif;
             clear: left;
-            font: 16px Helvetica, Arial, sans-serif;
+            font-size: 16px;
             width: 100%; /* 부모 요소의 너비를 따름 */
             margin: 0 auto; /* 중앙 정렬 블록 요소 */
         }
@@ -52,6 +53,7 @@
             margin-left: 10px;
         }
         #mc-embedded-subscribe {
+            font-family: 'Montserrat', sans-serif;
             margin-right: auto; /* 왼쪽 정렬 */
         }
     </style>
@@ -102,6 +104,7 @@
         var $mcj = jQuery.noConflict(true);
     </script>
 </div>
+
 
 
 
