--- a/dotnetgirls_site/Layout/Header.razor
+++ b/dotnetgirls_site/Layout/Header.razor
@@ -6,6 +6,7 @@
         </div>
         <ul class="navbar__menu">
             <li><a href="#about">ABOUT</a></li>
+            <li><a href="#event">EVENT</a></li>
             <li><a href="#subscribe">SUBSCRIBE</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
