--- a/dotnetgirls_site/wwwroot/css/Header.css
+++ b/dotnetgirls_site/wwwroot/css/Header.css
@@ -1,5 +1,5 @@
 #header {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
     position: sticky;
     top: 0;
     backdrop-filter: blur(5px);
