few  design adit

--- a/dotnetgirls_site/Components/Event.razor
+++ b/dotnetgirls_site/Components/Event.razor
@@ -2,6 +2,7 @@
 
 <section id="event">
     <h1>Upcoming Events and Past Events</h1>
+    <p>If you want to know about it, click this button!</p>
     <a href="https://github.com/dotnetgirls/workshop-portfolio">
      <button>Go to see</button>
     </a>
