--- a/dotnetgirls_site/wwwroot/css/Home.css
+++ b/dotnetgirls_site/wwwroot/css/Home.css
@@ -1,13 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=New+Amsterdam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=New+Amsterdam&family=Pacifico&display=swap');
 @font-face {
     font-family: 'Cafe24Decoshadow';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-3@1.1/Cafe24Decoshadow.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Cafe24Lovingu';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-3@1.1/Cafe24Lovingu.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -58,15 +53,18 @@ img {
 
 .overlay h1 {
     margin-top: 40px;
-    font-family: 'Cafe24Decoshadow';
+    /*font-family: 'Cafe24Decoshadow';*/
+    font-family: "Pacifico", cursive;
+    font-weight : 400px;
     font-size: 100px;
     margin-bottom: 20px;
     color: white;
 }
 
 .overlay p {
-    font-family: 'Cafe24Lovingu';
-    font-size: 50px;
+    font-family: "Edu VIC WA NT Beginner", cursive;
+    font-optical-sizing: auto;
+    font-size: 40px;
     margin: 0 auto;
     color: white;
 }
