--- a/dotnetgirls_site/wwwroot/css/Footer.css
+++ b/dotnetgirls_site/wwwroot/css/Footer.css
@@ -2,6 +2,7 @@
     font-family: 'Montserrat';
     padding-top:30px;
     padding-bottom:0px;
+    margin-bottom: 0px;
     text-align: center;
     background-color: #bfbfbf;
     color: white;
