--- a/dotnetgirls_site/wwwroot/css/About.css
+++ b/dotnetgirls_site/wwwroot/css/About.css
@@ -6,7 +6,7 @@
 #about_h1 {
     font-family: 'Montserrat', sans-serif;
     margin-top: 40px;
-    font-size: 80px;
+    font-size: 8vw;
     margin-bottom: 20px;
     position: relative;
     display: inline-block;
