mailchimp account modify

--- a/dotnetgirls_site/Components/Subscribe.razor
+++ b/dotnetgirls_site/Components/Subscribe.razor
@@ -58,7 +58,7 @@
         }
     </style>
     <div id="mc_embed_signup">
-        <form action="https://naver.us22.list-manage.com/subscribe/post?u=24d27715d3f7aeb389f5cf491&amp;id=0356499a46&amp;f_id=0034d2e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <form action="https://dotnetgirls.us13.list-manage.com/subscribe/post?u=0e21b24071427bedc1044d464&amp;id=7c81716588&amp;f_id=007b19e9f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
             <div id="mc_embed_signup_scroll">
                 <h2>Subscribe by input Email Address here!</h2>
                 @* <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> *@
