footer email modify

--- a/dotnetgirls_site/Layout/Footer.razor
+++ b/dotnetgirls_site/Layout/Footer.razor
@@ -1,7 +1,7 @@
 <link href="css/Footer.css" rel="stylesheet" />
 
 <section id="footer">
-    <a href="mailto:admin@dotnetgirls.org">Contact e-mail : admin@dotnetgirls.org</a>
+    <a href="mailto:social@dotnetgirls.org">Contact e-mail : social@dotnetgirls.org</a>
 </section>
 
 @code{
