event section link modify

--- a/dotnetgirls_site/Components/Event.razor
+++ b/dotnetgirls_site/Components/Event.razor
@@ -2,7 +2,7 @@
 
 <section id="event">
     <h1>Upcoming Events and Past Events</h1>
-    <a href="https://github.com/dotnetgirls/workshop-portfolio">
+    <a href="https://github.com/dotnetgirls/Events">
      <button>Go to see</button>
     </a>
 </section>
