--- a/dotnetgirls_site/Components/Contact.razor
+++ b/dotnetgirls_site/Components/Contact.razor
@@ -9,7 +9,7 @@
             </a>
         </div>
         <div class="x-content">
-            <a href="mailto:admin@dotnetgirls.org" target="_blank" rel="noopener noreferrer">
+            <a href="https://x.com/dotnet_girls" target="_blank" rel="noopener noreferrer">
                 <img src="images/x-logo.png" alt="X Logo" class="x-logo" />
             </a>
         </div>
